# robot-lab

./: LICENSE  README.md
panda_controllers/: CMakeLists.txt  package.xml  panda_controllers_plugin.xml
panda_controllers/config/: panda_controllers.yaml
panda_controllers/include/panda_controllers/: cartesian_impedance_example_controller.h  cartesian_pose_example_controller.h  cartesian_velocity_example_controller.h  elbow_example_controller.h  force_example_controller.h
panda_controllers/launch/: cartesian_impedance_example_controller.launch  cartesian_pose_example_controller.launch  cartesian_velocity_example_controller.launch  elbow_example_controller.launch  force_example_controller.launch  move_to_start.launch
panda_controllers/src/: cartesian_impedance_example_controller.cpp  cartesian_pose_example_controller.cpp  cartesian_velocity_example_controller.cpp  elbow_example_controller.cpp  force_example_controller.cpp
panda_suction_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_suction_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml  sensors_3d.yaml  sensors_realsense_pointcloud.yaml
panda_suction_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+8 more)
robot_bringup/: CMakeLists.txt  package.xml
vacuum_control/: CMakeLists.txt  package.xml
(+4 files in other folders)
